--- a/src/styles/pdftoolcard.module.css
+++ b/src/styles/pdftoolcard.module.css
@@ -1,4 +1,5 @@
 .cardwrapper:hover > div {
   border-color: var(--primary);
+  transition-duration: 250ms;
   box-shadow: 0px 0px 25px 0px var(--primary);
 }
