Custom 404 + dynamic viewport units

--- a/src/app/[lang]/globals.css
+++ b/src/app/[lang]/globals.css
@@ -8,11 +8,11 @@
 
 html {
   background-color: var(--primary);
-  width: 100vw;
+  width: 100dvw;
   overflow-x: hidden;
 }
 body {
   background-color: #fff;
-  width: 100vw;
+  width: 100dvw;
   overflow-x: hidden;
 }
