--- a/src/styles/landingsection.module.css
+++ b/src/styles/landingsection.module.css
@@ -6,3 +6,13 @@
   background-size: cover;
   background-image: url("/images/landing_page_background.svg");
 }
+
+.file_left {
+  animation: file-left 3s linear infinite;
+}
+
+@keyframes file-left {
+  50% {
+    transform: translateY(50px);
+  }
+}
